update and middleware

--- a/src/app/account/login/app.login.component.html
+++ b/src/app/account/login/app.login.component.html
@@ -12,7 +12,7 @@
                     <div class="p-col-12">
                         <div class="input-wrapper input-field"
                             [class.error]="username.invalid && username.hasError('required','type')">
-                            <label class="form-label" for="form3Example3">Noms d'utilisateur<span
+                            <label class="form-label" for="form3Example3">Nom d'utilisateur<span
                                     class="text-danger me-1">*</span></label>
                             <input type="text" formControlName="username" placeholder="user " required
                                 pInputText>
@@ -27,7 +27,7 @@
                     <div class="p-col-12">
                         <div class="input-wrapper input-field"
                             [class.error]="password.invalid && password.hasError( 'required', 'type') ">
-                            <label for="pass" class="form-label">Password<span
+                            <label for="pass" class="form-label">Mots de passe<span
                                     class="text-danger me-1 ">*</span></label>
                             <input type="password" formControlName="password" class="form-control " required pInputText>
                         </div>
