--- a/src/app/administration/personnes/details-personnes/details-personnes.component.html
+++ b/src/app/administration/personnes/details-personnes/details-personnes.component.html
@@ -5,7 +5,7 @@
 <p-toolbar *ngIf="!loads">
 
         <div class="w-full flex text-center align-items-center justify-content-center">
-            <h3 class="text-2xl text-center font-bold mb-0">INFORMATIONS SUR {{personne.nom}} </h3>
+            <h3 class="text-2xl text-center font-bold mb-0">INFORMATIONS SUR {{personne?.nom}} </h3>
 
         </div>
     <p-toast ></p-toast>
@@ -27,23 +27,23 @@
                         <ul class="list-none p-0 m-0 w-full">
                             <li class="flex w-full align-items-center py-3 px-2 border-top-1 surface-border flex justify-content-between">
                                 <div class="text-500 w-[40%]  font-medium">Noms : </div>
-                                <div class="text-center flex justify-content-center align-content-center w-[60%]"> <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne.nom}} </span></div>
+                                <div class="text-center flex justify-content-center align-content-center w-[60%]"> <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne?.nom}} </span></div>
 
                             </li>
                             <li class="flex w-full align-items-center py-3 px-2 border-top-1 surface-border flex justify-content-between">
                                 <div class="text-500 w-[40%]   font-medium">Date de Naissance : </div>
-                                <div class="text-center flex justify-content-center align-content-center w-[60%]"> <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne.date_naissance | date:"MMM, dd yyyy"}}</span></div>
+                                <div class="text-center flex justify-content-center align-content-center w-[60%]"> <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne?.date_naissance | date:"MMM, dd yyyy"}}</span></div>
 
                             </li>
                             <li class="flex w-full align-items-center py-3 px-2 border-top-1 surface-border flex justify-content-between">
                                 <div class="text-500 w-[40%]   font-medium">Region : </div>
-                                <div class="text-center flex justify-content-center align-content-center w-[60%]"> <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne.region}}</span></div>
+                                <div class="text-center flex justify-content-center align-content-center w-[60%]"> <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne?.region?.region}}</span></div>
 
                             </li>
                             <li class="flex w-full align-items-center py-3 px-2 border-top-1 surface-border flex justify-content-between">
                                 <div class="text-500 w-[40%]   font-medium">Sexe : </div>
                                 <div class="text-center flex justify-content-center align-content-center w-[60%]">
-                                     <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne.sexe }}</span>
+                                     <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne?.sexe }}</span>
                                     </div>
 
                             </li>
@@ -51,6 +51,14 @@
                                 <div class="text-500 w-[40%]   font-medium">Statut : </div>
                                 <div class="text-center flex justify-content-center align-content-center w-[60%]">
                                     <p-tag [severity]="personne.statut == 'En vie' ? 'success' : 'danger'"  [value]= personne?.statut></p-tag>
+
+                                </div>
+
+                            </li>
+                            <li class="flex w-full align-items-center py-3 px-2 border-top-1 surface-border flex justify-content-between">
+                                <div class="text-500 w-[40%]   font-medium">Pourcentage de Vulnérabilités : </div>
+                                <div class="text-center flex justify-content-center align-content-center w-[60%]">
+                                    <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne?.sexe }}</span>
 
                                 </div>
 
@@ -69,7 +77,7 @@
                             <li class="flex w-full align-items-center py-3 px-2 border-top-1 surface-border flex justify-content-between">
                                 <div class="text-500 w-[40%]   font-medium">Noms de la residence </div>
                                 <div class="text-center flex justify-content-center align-content-center w-[60%]"> 
-                                    <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne.residence.description }}</span>
+                                    <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne?.residence?.description }}</span>
 
                                 </div>
 
@@ -77,7 +85,7 @@
                             <li class="flex w-full align-items-center py-3 px-2 border-top-1 surface-border flex justify-content-between">
                                 <div class="text-500 w-[40%]   font-medium">Quartier de la residence</div>
                                 <div class="text-center flex justify-content-center align-content-center w-[60%]">
-                                    <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne.residence.quartier.libelle }}</span>
+                                    <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne?.residence?.quartier?.libelle }}</span>
 
                                 </div>
 
@@ -85,7 +93,7 @@
                             <li class="flex w-full align-items-center py-3 px-2 border-top-1 surface-border flex justify-content-between">
                                 <div class="text-500 w-[40%]   font-medium">Commune </div>
                                 <div class="text-center flex justify-content-center align-content-center w-[60%]">
-                                    <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne.residence.quartier.commune.libelle }}</span>
+                                    <span class="text-500 w-full  font-bold text-black-alpha-80">{{personne?.residence?.quartier?.commune?.libelle }}</span>
 
                                 </div>
 
@@ -118,12 +126,12 @@
                               </ng-template>
                               <ng-template pTemplate="body" let-data>
                                 <tr>
-                                  <td>{{data.nom}}</td>
+                                  <td>{{data?.nom}}</td>
                                   <td>
                         
-                                      {{data.date_naissance |date:"MMM, dd yyyy"}}
+                                      {{data?.date_naissance |date:"MMM, dd yyyy"}}
                                   </td>
-                                  <td>{{data.region}}</td>
+                                  <td>{{data?.region}}</td>
                                   <td></td>
    
                                 </tr>
@@ -160,9 +168,9 @@
                           </ng-template>
                           <ng-template pTemplate="body" let-data>
                             <tr>
-                              <td>{{data.vulnerabilite.nom}}</td>
+                              <td>{{data?.vulnerabilite?.nom}}</td>
 
-                              <td>{{data.vulnerabilite.description}}</td>
+                              <td>{{data?.vulnerabilite?.description}}</td>
 
                             </tr>
                           </ng-template>
@@ -176,7 +184,7 @@
                             <li class="flex w-full align-items-center py-3 px-2 border-top-1 surface-border flex justify-content-between">
                                 <div class="text-500 w-[40%]   font-medium">Avez vous une cni ?  </div>
                                 <div class="text-center flex justify-content-center align-content-center w-[60%]"> 
-                                    <p-tag [severity]="personne.is_cni == true ? 'success' : 'primary'"  [value]= "personne.is_cni == true ? 'Oui' : 'Non'"></p-tag>
+                                    <p-tag [severity]="personne?.is_cni == true ? 'success' : 'primary'"  [value]= "personne?.is_cni == true ? 'Oui' : 'Non'"></p-tag>
 
                                 </div>
 
@@ -184,7 +192,7 @@
                             <li class="flex w-full align-items-center py-3 px-2 border-top-1 surface-border flex justify-content-between">
                                 <div class="text-500 w-[40%]   font-medium">Avez vous un acte de naissance ? </div>
                                 <div class="text-center flex justify-content-center align-content-center w-[60%]">
-                                    <p-tag [severity]="personne.is_actenaissance == true ? 'success' : 'primary'"  [value]= "personne.is_actenaissance == true ? 'Oui' : 'Non'"></p-tag>
+                                    <p-tag [severity]="personne?.is_actenaissance == true ? 'success' : 'primary'"  [value]= "personne?.is_actenaissance == true ? 'Oui' : 'Non'"></p-tag>
 
                                 </div>
 
@@ -192,7 +200,7 @@
                             <li class="flex w-full align-items-center py-3 px-2 border-top-1 surface-border flex justify-content-between">
                                 <div class="text-500 w-[40%]   font-medium">Etes vous chef de famille ? </div>
                                 <div class="text-center flex justify-content-center align-content-center w-[60%]">
-                                    <p-tag [severity]="personne.is_chef_menage == true ? 'success' : 'primary'"  [value]= "personne.is_chef_menage == true ? 'Oui' : 'Non'"></p-tag>
+                                    <p-tag [severity]="personne?.is_chef_menage == true ? 'success' : 'primary'"  [value]= "personne?.is_chef_menage == true ? 'Oui' : 'Non'"></p-tag>
 
                                 </div>
 
@@ -200,7 +208,7 @@
                             <li class="flex w-full align-items-center py-3 px-2 border-top-1 surface-border flex justify-content-between">
                                 <div class="text-500 w-[40%]   font-medium">Etes vous autochtone ? </div>
                                 <div class="text-center flex justify-content-center align-content-center w-[60%]">
-                                    <p-tag [severity]="personne.is_autochtone == true ? 'success' : 'primary'"  [value]= "personne.is_autochtone == true ? 'Oui' : 'Non'"></p-tag>
+                                    <p-tag [severity]="personne?.is_autochtone == true ? 'success' : 'primary'"  [value]= "personne?.is_autochtone == true ? 'Oui' : 'Non'"></p-tag>
 
                                 </div>
 
@@ -208,7 +216,7 @@
                             <li class="flex w-full align-items-center py-3 px-2 border-top-1 surface-border flex justify-content-between">
                                 <div class="text-500 w-[40%]   font-medium">Etes vous handicapé ? </div>
                                 <div class="text-center flex justify-content-center align-content-center w-[60%]"> 
-                                    <p-tag [severity]="personne.is_handicape == true ? 'success' : 'primary'"  [value]= "personne.is_handicape == true ? 'Oui' : 'Non'"></p-tag>
+                                    <p-tag [severity]="personne?.is_handicape == true ? 'success' : 'primary'"  [value]= "personne?.is_handicape == true ? 'Oui' : 'Non'"></p-tag>
 
                                 </div>
 
