--- a/src/app/administration/utilisateur/list-utilisateurs/list-utilisateurs.component.html
+++ b/src/app/administration/utilisateur/list-utilisateurs/list-utilisateurs.component.html
@@ -1,2 +1,360 @@
 <app-skelleton *ngIf="load" [table]="['Noms Utilisateur', 'Role']" title="Liste Utilisateurs"></app-skelleton>
-<app-generic-table [columns]="tableColumns" icon="user" *ngIf="!load" [fields]="formsFields" [data]="tableData" titlePage="Liste des Utilisateurs"></app-generic-table>
+
+<div class="grid">
+    <div class="col-12">
+        <app-skelleton *ngIf="load" [table]="['Noms Utilisateur', 'Role']" title="Liste Utilisateurs"></app-skelleton>
+
+        <div *ngIf="!load" class="card border-round-2xl">
+
+
+
+            <div class="col flex justify-content-between align-items-center">
+                <div class="justify-content-center flex align-items-center">
+                    <i class="pi pi-fw pi-user" style="font-size: xxx-large;color: #0e3f6a;"></i>
+
+                    <h3 style="
+                font-weight: bold;
+                color: #0e3f6a;
+                white-space: nowrap !important;
+            ">
+                        Liste des Utilisateurs
+                    </h3>
+                </div>
+                <div class="flex align-content-center align-items-center">
+
+
+                    <!-- Option buttons -->
+                    <button type="button" [style]="{minHeight: '48px'}" pButton pRipple (click)="printListe()"
+                        class="p-button-secondary mr-2" pTooltip="PRINT" icon="pi pi-print" label="Imprimer"></button>
+
+                    <p-button label="Ajouter un Utilisateur" icon="pi pi-plus" [style]="{ minHeight: '48px' }"
+                        iconPos="right" (click)="add()"></p-button>
+
+
+                </div>
+
+            </div>
+
+            <p-accordion *ngIf="!load" [activeIndex]="0">
+
+                <p-accordionTab *ngFor="let data of tableData">
+                    <ng-template pTemplate="header">
+                        <span class="flex align-items-center gap-2 w-full">
+                            <i class="pi pi-building"></i>
+                            <span class="font-bold white-space-nowrap">{{data.libelle}}</span>
+                            <p-badge value="{{data?.utilisateurs?.length}}" class="ml-auto" />
+                        </span>
+                    </ng-template>
+                    <p-table #dt [value]="data.utilisateurs" [columns]="cols" responsiveLayout="scroll" [rows]="10"
+                        [globalFilterFields]="[
+                    'username',
+                    'raisonSociale',
+                    'nom',
+                    'prenoms'
+                    ]" [rows]="10" [paginator]="true" [rowsPerPageOptions]="[10, 20, 30]"
+                        [showCurrentPageReport]="true"
+                        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+                        [(selection)]="selectedEtudiants" selectionMode="multiple" [rowHover]="true" dataKey="id">
+                        <ng-template pTemplate="caption">
+                            <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
+                                <div style="width: 100%">
+                                    <div style="width: 100%; display: flex">
+                                        <div style="width: 94% !important">
+                                            <span class="block mt-2 md:mt-0 p-input-icon-left">
+                                                <i class="pi pi-search"></i>
+                                                <input pInputText type="text" class="input" style="
+                                                width: 100% !important;
+                                                border-radius: 20px !important;
+                                                border-color: cornflowerblue;
+
+                                                min-height: 48px !important;
+                                            " (input)="onGlobalFilter(dt, $event)" placeholder="Rechercher..."
+                                                    class="w-full sm:w-auto" />
+                                            </span>
+                                        </div>
+
+                                        <div
+                                            class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
+                                            <i class="pi pi-file" (click)="dt.exportCSV()" pTooltip="CSV"
+                                                tooltipPosition="bottom" style="
+                                            font-size: 1.5rem;
+                                            cursor: pointer;
+                                            margin-right: 13px;
+                                            color: #757575;
+                                            margin-left: 13px;
+                                        "></i>
+
+                                            <i class="pi pi-file-excel" (click)="exportExcel()" pTooltip="XLS"
+                                                tooltipPosition="bottom" style="
+                                            font-size: 1.5rem;
+                                            cursor: pointer;
+                                            margin-right: 13px;
+                                            color: #757575;
+                                        "></i>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </ng-template>
+
+                        <ng-template pTemplate="header">
+
+                            <tr>
+                                <th>#</th>
+                                <th pSortableColumn="username">
+                                    Nom d'utilisateur
+                                    <p-sortIcon field="username"></p-sortIcon>
+                                </th>
+                                <th pSortableColumn="nom">
+                                    Noms<p-sortIcon field="nom"></p-sortIcon>
+                                </th>
+                                <th pSortableColumn="prenoms">
+                                    Prenoms
+                                    <p-sortIcon field="prenoms"></p-sortIcon>
+                                </th>
+                                <th pSortableColumn="raisonSociale">
+                                    Raison Sociale <p-sortIcon field="raisonSociale"></p-sortIcon>
+                                </th>
+                                <th></th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-item let-i="rowIndex">
+                            <tr>
+                                <td style="width: 5%; min-width: 3rem">
+                                    {{ i + 1 }}
+                                </td>
+                                <td>
+                                    <span class="p-column-title">Noms d'utilisateur</span>
+                                    {{ item?.username }}
+                                </td>
+                                <td>
+                                    <span class="p-column-title">Noms</span>
+                                    {{ item?.nom }}
+                                </td>
+                                <td>
+                                    <span class="p-column-title">Prenoms</span>
+                                    {{ item?.prenoms }}
+                                </td>
+                                <td>
+                                    <span class="p-column-title">raisonSociale</span>
+                                    {{ item?.raisonSociale }}
+                                </td>
+                                <td>
+                                    <div class="flex">
+                                        <i class="pi pi-eye icon mr-3" routerLink="../details-etudiants/{{item?.id}}"
+                                            style="font-size: 1.5rem;cursor: pointer"></i>
+                                        <i class="pi pi-pencil icon mr-3" (click)="edit(item)"
+                                            style="font-size: 1.5rem;cursor: pointer;"></i>
+                                        <i class="pi pi-trash icon" (click)="opendeleteDialog(item)"
+                                            style="font-size: 1.5rem;cursor: pointer"></i>
+                                    </div>
+                                </td>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="emptymessage">
+                            <tr>
+                                <td colspan="6" style="text-align: center" style="text-align: center">
+                                    Aucun utilisateur trouvé.
+                                </td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                </p-accordionTab>
+
+            </p-accordion>
+
+
+        </div>
+    </div>
+</div>
+
+
+<p-dialog [(visible)]="deleteDialog" header="Suppression" [modal]="true" [style]="{ width: '450px' }">
+    <div class="flex align-items-center">
+        <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem; color: red"></i>
+        <span>Voulez-vous supprimer l'utilisateur
+            <b>{{ temporaile.username }}</b>?</span>
+    </div>
+    <ng-template pTemplate="footer">
+        <button pButton pRipple icon="pi pi-times" class="p-button-secondary" label="Non" size="small"
+            (click)="deleteDialog = false"></button>
+        <button pButton pRipple size="small" icon="pi pi-check" class="p-button-danger" label="oui , supprimer"
+            (click)="deleteUsers()">
+            <i *ngIf="state" class="pi pi-spin pi-spinner"></i>
+
+        </button>
+    </ng-template>
+</p-dialog>
+
+
+<p-dialog [(visible)]="addEdit" header="{{ formTitle }}" [modal]="true"
+    [style]="{ minWidth: '60%', borderRadius: '40px' }" [draggable]="false" [resizable]="false">
+    <form [formGroup]="formulaires" class="pt-2 block">
+
+        <div class="col mt-3">
+            <span>
+                <label class="mb-2" style="
+                font-weight: bold;
+                color: rgb(73, 73, 73);
+            " for="sexe">Rôle *</label>
+                <p-dropdown formControlName="idrole" [options]="roles" optionLabel="libelle" class="mt-2"
+                    appendTo="body" [(ngModel)]="temporaile.idrole" id="role" optionValue="id" [style]="{
+                   width: '100%',
+                   borderRadius: '10px',
+                   minHeight: '48px'
+               }" placeholder="Selectionnez le Rôle"></p-dropdown>
+
+
+
+
+                <div *ngIf="idrole.touched && idrole.invalid" class="erreur">
+                    <div *ngIf="idrole.errors.required">
+                        Le rôle est requis.
+                    </div>
+                </div>
+            </span>
+        </div>
+        <div class="col-12 mt-3">
+            <input pInputText id="is" [(ngModel)]="temporaile.id" class="mt-2" formControlName="id" [style]="{
+                    width: '100%',
+                    borderRadius: '10px',
+                    minHeight: '48px',
+                    display: 'none'
+                }" />
+
+
+            <span>
+                <label class="mb-2" style="
+                font-weight: bold;
+                color: rgb(73, 73, 73);
+            " for="noms">Nom d'utilisateur *</label>
+                <input pInputText id="noms" class="mt-2" [(ngModel)]="temporaile.username" formControlName="username"
+                    [style]="{
+                        width: '100%',
+                        borderRadius: '10px',
+                        minHeight: '48px'
+                    }" />
+
+                <div *ngIf="username.touched && username.invalid" class="erreur">
+                    <div *ngIf="username.errors.required">
+                        Le nom d'utilisateur est requis.
+                    </div>
+                </div>
+            </span>
+        </div>
+        <div class="col-12 mt-3">
+            <span>
+                <!-- password -->
+                <label class="mb-2" style="
+                font-weight: bold;
+                color: rgb(73, 73, 73);
+            " for="date">Mots de Passe</label>
+                <p-password class="mt-2" formControlName="password" [(ngModel)]="temporaile.password" [toggleMask]="true" [style]="{
+                    width: '100%',
+                    borderRadius: '10px',
+                    minHeight: '48px'
+                }"></p-password>
+
+
+                <div *ngIf="password.touched && password.invalid" class="erreur">
+                    <div *ngIf="password.errors.required">
+                        Le Mots de passe est requis.
+                    </div>
+                    <div *ngIf="password.errors.minLength">
+                        Le Mots de passe dois avoir au moins 8 charactéres.
+                    </div>
+                </div>
+            </span>
+        </div>
+
+
+        <div class="col-12 mt-3">
+            <span>
+                <label class="mb-2" style="
+                    font-weight: bold;
+                    color: rgb(73, 73, 73);
+                " for="nom">Noms *</label>
+                <input pInputText id="nom" class="mt-2" [(ngModel)]="temporaile.nom" formControlName="nom" [style]="{
+                        width: '100%',
+                        borderRadius: '10px',
+                        minHeight: '48px'
+                    }" />
+
+
+                <div *ngIf="
+                            nom.touched &&
+                            nom.invalid
+                        " class="erreur">
+                    <div *ngIf="nom.errors.required">
+                        Le noms est requis.
+                    </div>
+                </div>
+            </span>
+        </div>
+
+        <div class="col-12 mt-3">
+            <span>
+
+                <label class="mb-2" style="
+                        font-weight: bold;
+                        color: rgb(73, 73, 73);
+                    " for="role">Prenoms *</label>
+                <input pInputText id="prenoms" class="mt-2" [(ngModel)]="temporaile.prenoms" formControlName="prenoms"
+                    [style]="{
+                    width: '100%',
+                    borderRadius: '10px',
+                    minHeight: '48px'
+                }" />
+
+
+                <div *ngIf="prenoms.touched && prenoms.invalid" class="erreur">
+                    <div *ngIf="prenoms.errors.required">
+                        Le prenoms est requis.
+                    </div>
+
+                </div>
+            </span>
+        </div>
+        <div class="col-12 mt-3">
+            <span>
+
+                <label class="mb-2" class="mb-2" style="
+                        font-weight: bold;
+                        color: rgb(73, 73, 73);
+                    " for="role">Raison Sociale *</label>
+                <input pInputText id="prenoms" class="mt-2" [(ngModel)]="temporaile.raisonSociale"
+                    formControlName="raisonSociale" [style]="{
+                    width: '100%',
+                    borderRadius: '10px',
+                    minHeight: '48px'
+                }" />
+
+
+                <div *ngIf="raisonSociale.touched && raisonSociale.invalid" class="erreur">
+                    <div *ngIf="raisonSociale.errors.required">
+                        La raison socaile est requise.
+                    </div>
+
+                </div>
+            </span>
+        </div>
+
+    </form>
+    <ng-template pTemplate="footer">
+
+        <button pButton pRipple class="p-button-text" label="Annuler" (click)="addEdit = false"></button>
+        <button pButton pRipple class="p-button" *ngIf="formTitle == 'Ajouter un Utilisateur'" size="small"
+            label="Valider" (click)="save()" [disabled]="state">
+            <i *ngIf="state" class="pi pi-spin pi-spinner"></i>
+        </button>
+        <button pButton pRipple *ngIf="formTitle == 'Modifier un Utilisateur'" class="p-button" size="small"
+            label="Modifier" (click)="modifier()" [disabled]="state">
+            <i *ngIf="state" class="pi pi-spin pi-spinner"></i>
+        </button>
+    </ng-template>
+</p-dialog>
+
+<p-toast></p-toast>
