--- a/src/app/administration/quartiers/list-quartiers/list-quartiers.component.html
+++ b/src/app/administration/quartiers/list-quartiers/list-quartiers.component.html
@@ -153,7 +153,7 @@
 
         <!-- Creation d'un nouveau quartier -->
         <p-dialog [(visible)]="formState" header="Ajouter un quartier" [modal]="true" [style]="{ width: '450px' }">
-            <form class="flex flex-column" action="" [formGroup]="form">
+            <form class="flex flex-column" [formGroup]="form">
                 <div class="mb-4">
                     <span>Libellé</span>
                     <input
