create lookup module interface

--- a/src/app/administration/application.component.html
+++ b/src/app/administration/application.component.html
@@ -1,13 +1,19 @@
-<div class="layout-wrapper px-4" [ngClass]="{'layout-menu-horizontal': app.menuMode === 'horizontal',
-                                        'layout-menu-overlay': app.menuMode === 'overlay',
-                                        'layout-menu-static': app.menuMode === 'static',
-                                        'layout-menu-slim': app.menuMode === 'slim',
-                                        'layout-menu-light': app.lightMenu === true,
-                                        'layout-menu-overlay-active': overlayMenuActive,
-                                        'layout-menu-mobile-active': staticMenuMobileActive,
-                                        'layout-menu-static-inactive': staticMenuDesktopInactive,
-                                        'p-input-filled': app.inputStyle === 'filled', 'p-ripple-disabled': !app.ripple}" (click)="onLayoutClick()">
-
+<div
+    class="layout-wrapper px-4"
+    [ngClass]="{
+        'layout-menu-horizontal': app.menuMode === 'horizontal',
+        'layout-menu-overlay': app.menuMode === 'overlay',
+        'layout-menu-static': app.menuMode === 'static',
+        'layout-menu-slim': app.menuMode === 'slim',
+        'layout-menu-light': app.lightMenu === true,
+        'layout-menu-overlay-active': overlayMenuActive,
+        'layout-menu-mobile-active': staticMenuMobileActive,
+        'layout-menu-static-inactive': staticMenuDesktopInactive,
+        'p-input-filled': app.inputStyle === 'filled',
+        'p-ripple-disabled': !app.ripple
+    }"
+    (click)="onLayoutClick()"
+>
     <app-topbar></app-topbar>
 
     <app-menu></app-menu>
